[Docs] Update theme syncing to link to theme kit

--- a/index.html
+++ b/index.html
@@ -119,15 +119,11 @@ git clone https://github.com/Shopify/Timber.git
           THEME EDITING
         ===================================== -->
         <h2 class="doc-title gettingstarted-title" id="theme-editing"><strong>1.4 </strong>Theme Editing</h2>
-        <p class="docs-text">Once you've downloaded your theme it's time to get it onto your store. Either upload the zip to <code>your-url.com/admin/themes</code> or use one of the programs below. Either way, you can use your text editor of choice.</p>
+        <p class="docs-text">Once you've downloaded your theme it's time to get it onto your store. Either upload the zip to <code>your-url.com/admin/themes</code> or use Theme Kit. Either way, you can use your text editor of choice.</p>
         <div class="grid">
-          <div class="grid__item one-half small--one-whole">
-            <h4 class="docs-h4">Theme Gem</h4>
-            <p class="docs-text">If you're comfortable with the command line, use the <a href="https://github.com/Shopify/shopify_theme" class="docs-link">Shopify Theme Gem</a> on OS X or Windows to upload changes to your theme with ease.</p>
-          </div>
-          <div class="grid__item one-half small--one-whole">
-            <h4 class="docs-h4">Desktop Theme Editor</h4>
-            <p class="docs-text">If you prefer a beautiful interface, use the <a href="https://apps.shopify.com/desktop-theme-editor" class="docs-link">Desktop Theme Editor</a> and start managing all of your theme assets.</p>
+          <div class="grid__item">
+            <h4 class="docs-h4">Theme Kit</h4>
+            <p class="docs-text">If you're comfortable with the command line, use <a href="https://github.com/Shopify/themekit" class="docs-link">Theme Kit</a> on OS X or Windows to upload changes to your theme with ease.</p>
           </div>
         </div>
 
